Fixed empty info in character details, fixed nav spacing and responsiveness

--- a/sass/components/_book-list.scss
+++ b/sass/components/_book-list.scss
@@ -2,15 +2,15 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 body {
-  background-color: #DCF2FF; /* Light grey background */
+  background-color: #DCF2FF; 
   font-family: "Noto Sans", sans-serif;
-  color: #333; /* Dark grey text color */
-  padding: 20px; /* Add padding for content */
+  color: #333; 
+  padding: 20px; 
 }
 
 /* Heading Styles */
 h2 {
-  color: #206B7F; /* Dark teal heading */
+  color: #206B7F; 
   font-size: 38px;
   margin-top: 20px;
   margin-bottom: 20px;
@@ -19,7 +19,7 @@ h2 {
 h3 {
   font-size: 24px;
   font-weight: bold;
-  color: #2F4858; /* Dark blue subheadings */
+  color: #2F4858; 
   margin-bottom: 10px;
 }
 
@@ -39,21 +39,20 @@ p {
 
 #character-list li {
   margin-bottom: 30px;
-  border-left: 4px solid #206B7F; /* Dark teal border on list items */
+  border-left: 4px solid #206B7F; 
   padding-left: 15px;
 }
 
 /* Link Styles */
 a {
   text-decoration: none;
-  color: #206B7F; /* Dark teal link color */
+  color: #206B7F; 
 }
 
 a:hover {
-  color: #2F4858; /* Dark blue on hover */
+  color: #2F4858; 
 }
 
-/* Additional Styling */
 #app {
   padding: 20px;
 }
