--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -1,9 +1,9 @@
 
 /* Basic styling for the navigation */
 nav {
-    background-color: #00203FFF; /* Updated background color */
+    background-color: #00203FFF; 
     color: #fff;
-    padding: 10px 0; /* Adjusted padding */
+    padding: 10px 0; 
     border-top-left-radius: 15px; /* Rounded bottom left corner */
     border-top-right-radius: 15px;
 }
@@ -18,14 +18,14 @@ nav {
 .menu {
     list-style-type: none;
     padding: 0;
-    padding: 15px 20px; /* Increased padding */
+    padding: 15px 20px; 
     transition: background-color 0.3s;
-    font-size: 18px; /* Increased font size */
+    font-size: 18px; 
 }
 
 .menu li {
     display: inline-block;
-    margin-right: 250px; /* Increased margin between menu items */
+    margin-right: 250px;
 }
 
 .menu li:last-child {
@@ -35,10 +35,10 @@ nav {
 .menu a {
     text-decoration: none;
     color: #fff;
-    padding: 15px 20px; /* Increased padding */
+    padding: 15px 20px; 
     transition: background-color 0.3s;
-    font-size: 18px; /* Increased font size */
-    position: relative; /* Add relative positioning */
+    font-size: 18px; 
+    position: relative; 
 }
 
 
@@ -47,14 +47,14 @@ nav {
     position: absolute;
     left: 0;
     bottom: 0;
-    width: 0; /* Set initial width to 0 */
+    width: 0; 
     height: 2px;
-    background-color: #fff; /* White underline color */
-    transition: width 0.3s ease-in-out; /* Smooth transition */
+    background-color: #fff;
+    transition: width 0.3s ease-in-out; 
 }
 
 .menu a:hover::after {
-    width: 100%; /* Expand width to 100% upon hover */
+    width: 100%; 
 }
 
 
